# ray-tracer-challenge

./: CMakeLists.txt  README.md  TODO.md  main.cpp  main.cu
Drawing_lib/: CMakeLists.txt  Canvas.cpp  Canvas.h
Google_tests/: CMakeLists.txt  CameraTest.cpp  CanvasTest.cpp  ColorTest.cpp  ConeTest.cpp  CubeTest.cpp  CylinderTest.cpp  Example.cpp  GroupTest.cpp  IntersectionTest.cpp  LightTest.cpp  LightingAnObjectTest.cpp  MaterialTest.cpp  MatrixTest.cpp  PatternTest.cpp  PlaneTest.cpp  Point3Test.cpp  RayTest.cpp  ShapeTest.cpp  SphereTest.cpp  TransformationTest.cpp  TupleTest.cpp  Vec3Test.cpp  WorldTest.cpp
Google_tests/lib/googlemock/scripts/generator/: LICENSE
GraphicsLibrary/: CMakeLists.txt  Camera.cpp  Canvas.cpp  Canvas.h  CheckerPattern.cpp  Lighting.cpp  Lighting.h  Material.cpp  Material.h  Matrix.cpp  Pattern.cpp  Pattern.h  Plane.cpp  Plane.h  PointLight.cpp  PointLight.h  RingPattern.cpp  RingPattern.h  Shape.cpp  Shape.h  Sphere.cpp  Sphere.h  StripedPattern.cpp  StripedPattern.h  World.cpp  World.h
GraphicsLibrary/display/: CMakeLists.txt  Canvas.cpp  Canvas.h
GraphicsLibrary/lights/: CMakeLists.txt  PointLight.cpp  PointLight.h
GraphicsLibrary/patterns/: CMakeLists.txt  CheckerPattern.cpp  CheckerPattern.h  GradientPattern.cpp  GradientPattern.h  Pattern.cpp  Pattern.h  RadialGradientPattern.cpp  RadialGradientPattern.h  RingPattern.cpp  RingPattern.h  SolidPattern.cpp  SolidPattern.h  StripedPattern.cpp  StripedPattern.h  TestPattern.cpp  TestPattern.h
GraphicsLibrary/primitives/: CMakeLists.txt  Color.cpp  Color.h  Intersection.cpp  Intersection.h  Matrix.h  Ray.h  Transformation.h  Tuple.cpp  Tuple.h
GraphicsLibrary/scene/: CMakeLists.txt  Camera.cpp  Camera.h  LightingModels.cpp  LightingModels.h  PreparedComputation.cpp  PreparedComputation.h  World.cpp  World.h
GraphicsLibrary/shapes/: CMakeLists.txt  Cone.cpp  Cone.h  Cube.cpp  Cube.h  Cylinder.cpp  Cylinder.h  Group.cpp  Group.h  HollowGlassCone.cpp  HollowGlassCone.h  HollowGlassCube.cpp  HollowGlassCube.h  HollowGlassCylinder.cpp  HollowGlassCylinder.h  HollowGlassSphere.cpp  HollowGlassSphere.h  Material.cpp  Material.h  Plane.cpp  Plane.h  Shape.cpp  Shape.h  Sphere.cpp  Sphere.h  TestShape.cpp  TestShape.h
LinearAlgebra_lib/: CMakeLists.txt  Camera.cpp  Camera.h  Canvas.cpp  Canvas.h  Intersection.cpp  Intersection.h  Light.cpp  Light.h  Lighting.cpp  Lighting.h  LinearAlgebra.cpp  LinearAlgebra.h  Material.cpp  Material.h  Matrix.cpp  Matrix.h  Point3.cpp  Point3.h  PreparedComputation.cpp  PreparedComputation.h  Ray.cpp  Ray.h  Sphere.cpp  Sphere.h  Transformation.cpp  Transformation.h  Tuple.cpp  Tuple.cu  Tuple.h  Vec3.cpp  Vec3.h  World.cpp  World.h
